--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>
+
+    </h1>
+    <header>
+
+    </header>
+    <section>
+
+    </section>
+
 </body>
 </html>
